# fsicc

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: event.rs  input.rs  lexed_str.rs  lib.rs  output.rs  parser.rs  shortcuts.rs
crates/parser/src/grammar/: mod.rs
crates/parser/src/grammar/items/: mod.rs
crates/parser/src/syntax_kind/: generated.rs  mod.rs
crates/syntax/: Cargo.toml  fsic.ungram
crates/syntax/src/: lib.rs  parsing.rs  syntax_error.rs  syntax_node.rs
crates/syntax/src/ast/: mod.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs
xtask/src/codegen/: mod.rs
xtask/src/codegen/grammar/: ast_src.rs  mod.rs
