[workspace]
members = ["crates/*", "xtask"]
#default-members = ["crates/cli"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Kirill Lukashev <kirill.lukashev.sic@gmail.com>"]
repository = "https://github.com/sicikh/fsicc"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tracing = "0.1.40"
serde = "1.0.210"
smol_str = "0.3.1"
itertools = "0.14.0"
anyhow = "1.0.89"
thiserror = "2.0.11"
xshell = "0.2.6"
clap = "=4.5.17"
salsa = "0.18.0"
rustc-hash = "2.0.0"
either = "1.14.0"
parser = { path = "./crates/parser", package = "fsicc-parser" }
lexer = { path = "./crates/lexer", package = "fsicc-lexer" }
triomphe = "0.1.14"
