[package]
name = "fsicc-syntax"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
itertools.workspace = true
rustc-hash.workspace = true
rowan = "0.16.1"
parser.workspace = true
either.workspace = true
triomphe.workspace = true